...
  showWhenAuthenticated?: boolean;
}

const tabs: TabItem[] = [
  {
    href: '/dashboard',
    label: 'Dashboard',
    icon: HomeIcon,
    activeIcon: HomeIconSolid,
    showWhenAuthenticated: true
  },
  {
    href: '/fitness',
...
    icon: HeartIcon,
    activeIcon: HeartIconSolid,
    showWhenAuthenticated: true
  },
  {
    href: '/profile',
    label: 'Profile',
    icon: UserIcon,
    activeIcon: UserIconSolid,
    showWhenAuthenticated: true
  }
];

...
