...
import EnhancedOnboardingScreen from '../screens/onboarding/EnhancedOnboardingScreen';

import { DebugUtils } from '../utils/debugUtils';

export type RootStackParamList = {
  Main: undefined;
  Login: undefined;
  Register: undefined;
  Onboarding: undefined;
};

const Stack = createStackNavigator<RootStackParamList>();

export default function AppNavigator() {
...
